ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction3/input.ts.stderr
error: Unexpected token `=>`. Expected an identifier, void, yield, null, await, break, a string literal, a numeric literal, true, false, `, -, import, this, typeof, {, [, (
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/ErrorRecovery/ArrowFunctions/ArrowFunction3/input.ts:1:14
  |
1 | var v = (a): => {
  |              ^^

